# n8n-py-template

./: README.md  pyproject.toml
src/n8n_py/: core.py  handler.py
src/n8n_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
